Backwards Compatibility: 
Although attempted, there is currently no guarantee of backwards compatibility with original ezRPG versions.

For a complete list of all changes since last release, please see https://github.com/nands/ezrpg/commits/master. 

Version 0.1b (TBA)
	- Updated installer to accommodate new default style. 
	- Improved UTF-8 support, set as PHP default and transfer encoding.
	- Added ToS and Privacy pages(templates), improves SEO. 
	- Created modal dialog utility for use in JavaScripts.
	- Added jQuery 1.8.1 include to template, and copied a CDN into local.
	- Added session expiration(validation of same user access) functionality to the engine. 
	- Created a naming convention used for hooks so files are executed in a specific order.
	- Modified config file to use associative array, will be useful when scaled.
	- Added avatar functionality.
	- Created a scripts directory in /static.
	- Implemented a new style for the default template.
	- Changed naming hierarchy for templates, and created hidden directories used by Smarty.
	- Modified ModuleFactory to reveal config variables to modules(except DB).
	- Removed HTML purifier, too much dead weight to drag around.
	- Mixed PHP notices generated by template on registration page.
	- Fixed a few issues with MSG across a few template files. 
	- Improved layout, now uses a overall wrapper for nav and body divs.
	- Improved signature functionality, uses simple algorithm to compute. 
	- Added option to select password hashing algo' on installation.

Version 0.1a (06/2012)
	- Changed image bars to use only CSS
	- Added MySQL Improved adapter
	- Changed the way in which database adapters are initialized
	- Improved email validation in validate library
	- Implemented PBKDF2 hashing algorithm
	- Implemented bcrypt hashing algorithm 
	- Added passwords hashing performance test module