@@ -7,6 +7,8 @@
 		<link rel="stylesheet" href="static/default/style.css" type="text/css" />
 		
 		<script src="static/scripts/ext/jquery/jquery.1.8.1.min.js"></script>
+		<script src="static/scripts/ext/jquery/plugins/run.js"></script>
+		<script src="static/scripts/security.js"></script>
 		<title>{$TITLE|default:"ezRPG rework"}</title>
 	</head>
 	<body>
